@@ -4,6 +4,10 @@
 
   09 Sep 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
   cacti/netapp/scripts/ss_netapp.php:
+  Cleaning up some comments so they're correct.
+
+  09 Sep 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
+  cacti/netapp/scripts/ss_netapp.php:
   Adding the OIDs for the FCP checking and filling in the keys and status
   arrays. All that we need to do now is check if we're licensed and check
   the actual responses.
